# golink

./: BUILD  MODULE.bazel  README.md  go.mod  go.sum
gazelle/go_link/: BUILD.bazel  proto_gen.go
proto/: proto.bzl
